--- a/hyprpm.toml
+++ b/hyprpm.toml
@@ -4,7 +4,7 @@ authors = ["x140x1n"]
 
 [hypr-hotspots]
 description = "Plugin to create hotspots for waybar control and command execution."
-output = "hypr-hotspots.so"
+output = "build/hypr-hotspots.so"
 build = [
     "cmake -B build -S . -DCMAKE_BUILD_TYPE=Release",
     "cmake --build build",
